# MIT6.837-QUIZ

./: .gitignore  README.md
PA0/: Makefile  fern.tga  ifs.C  ifs.h  main.C  run.sh  vectors.h
PA1/: Makefile  camera.C  camera.h  main.C  object3d.C  object3d.h  scene_parser.C
PA2/: CMakeLists.txt  camera.C  camera.h  input_parser.C  input_parser.h  main.C  object3d.C  object3d.h  ray_caster.C  ray_caster.h  run.sh
PA3/: CMakeLists.txt  camera.C  glCanvas.C  glCanvas.h  input_parser.C  light.h  main.C  material.C  material.h  object3d.C  object3d.h  ray_caster.C  ray_caster.h  run.sh  (+2 more)
PA4/: CMakeLists.txt  camera.C  camera.h  glCanvas.C  glCanvas.h  image.h  input_parser.C  input_parser.h  main.C  material.C  material.h  object3d.C  object3d.h  rayTree.h  ray_tracer.C  ray_tracer.h  run.sh  scene_parser.C  scene_parser.h
PA4/SCENE/: scene4_01_sphere_shadow.txt  scene4_02_colored_shadows.txt  scene4_03_mirrored_floor.txt  scene4_04_reflective_sphere.txt  scene4_05_transparent_bar.txt  scene4_06_transparent_bars.txt  scene4_07_transparent_sphere_1.0.txt  scene4_08_transparent_sphere_1.1.txt  scene4_09_transparent_sphere_2.0.txt  scene4_10_point_light_distance.txt  scene4_11_point_light_circle.txt  scene4_12_point_light_circle_d_attenuation.txt  scene4_13_point_light_circle_d2_attenuation.txt  scene4_14_faceted_gem.txt
PA7/: CMakeLists.txt  camera.cpp  camera.h  film.cpp  film.h  filter.cpp  filter.h  group.cpp  image.h  input_parser.cpp  input_parser.h  light.h  main.cpp  object3d.cpp  plane.cpp  ray.h  rayTree.cpp  ray_tracer.cpp  ray_tracer.h  raytracing_stats.cpp  run.sh  sample.h  sampler.cpp  sampler.h  scene_parser.h  sphere.cpp  transform.cpp  triangle.cpp  vectors.h
PA7/SCENE/: scene7_01_sphere_triangle.txt  scene7_02_checkerboard.txt  scene7_03_marble_vase.txt  scene7_04_6.837_logo.txt  scene7_05_glass_sphere.txt  scene7_06_faceted_gem.txt
PA8/: CMakeLists.txt  arg_parser.h  curve.cpp  curve.h  glCanvas.cpp  glCanvas.h  hit.h  main.cpp  matrix.cpp  matrix.h  run.sh  spline.cpp  spline.h  spline_parser.cpp  spline_parser.h  surface.cpp  surface.h  triangle_mesh.cpp  triangle_mesh.h  vectors.h
PA8/SCENE/: output8_01_bspline.txt  scene8_06_torus_high.txt  scene8_06_torus_low.txt  scene8_07_vase_high.txt  scene8_07_vase_low.txt  scene8_08_bezier_patch_high.txt  scene8_08_bezier_patch_low.txt  scene8_08_bezier_patch_med.txt  scene8_09_teapot_high.txt  scene8_09_teapot_low.txt  scene8_10_transparent_vase.txt  scene8_11_reflective_teapot.txt
PA9/: CMakeLists.txt  forcefield.cpp  forcefield.h  forcefield.hpp  generator.cpp  generator.h  generator.hpp  gl.cpp  gl.hpp  glCanvas.cpp  glCanvas.h  integrator.cpp  integrator.h  integrator.hpp  main.cpp  matrix.cpp  matrix.h  matrix.hpp  parser.cpp  parser.h  parser.hpp  particle.cpp  particle.h  particle.hpp  particleSet.h  particleSet.hpp  random.h  random.hpp  run.sh  system.cpp  system.h  system.hpp  vectors.h
(+92 files in other folders)
